force-app/main/default/objects/Skill_Expertise__c/Skill_Expertise__c.object-meta.xml
<CustomObject>
    <label>Skill Expertise</label>
    <nameField>
        <label>Skill Expertise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skill Expertises</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>