force-app/main/default/objects/Skill_Expertise__c/fields/Curriculum__c.field-meta.xml
<CustomField>
    <fullName>Curriculum__c</fullName>
    <label>Curriculum</label>
    <referenceTo>Curriculum__c</referenceTo>
    <relationshipLabel>Skill Expertises</relationshipLabel>
    <relationshipName>Skill_Expertises</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>